@@ -19,6 +19,7 @@ BULLET
 	nuclear = false //nuclear shell, uses tntMass for yield(kt)
 	beehive = false //round separates into multiple submunitions on Timed/Proximity Fuze detonation
 	subMunitionType = def; 1// only needed if beehive = true, else leave blank/don't add. integer after type specifies # of subprojectiles released
+	projectileTTL= 0.5 //time to live, used by submunitions deployed from beehive rounds to set how long they persist for 
 	massMod = 0 //mass (in tons) added to hit part. negative values will reduce mass instead
 	impulse = 0// impulse applied to hit part. negative values will pull instead of push
 	tntMass = 0.001
@@ -611,6 +612,7 @@ BULLET
 	fadeColor = True
 	startColor = 192, 192, 192, 32
 	apBulletMod = 0.8 //21mm
+	projectileTTL= 0.5
 	bulletDragTypeName = AnalyticEstimate
 	projectileCount = 1
 	subProjectileDispersion = 0.75 //degrees of spread
